Add `Win32_Graphics_DirectDraw` to `windows-sys`

--- a/crates/libs/sys/Cargo.toml
+++ b/crates/libs/sys/Cargo.toml
@@ -59,6 +59,7 @@ Win32_Foundation = ["Win32"]
 Win32_Gaming = ["Win32"]
 Win32_Globalization = ["Win32"]
 Win32_Graphics = ["Win32"]
+Win32_Graphics_DirectDraw = ["Win32_Graphics"]
 Win32_Graphics_Dwm = ["Win32_Graphics"]
 Win32_Graphics_Gdi = ["Win32_Graphics"]
 Win32_Graphics_Hlsl = ["Win32_Graphics"]
